# VINS-Fusion_learning

./: CMakeLists.txt  VINS-Fusion.kdev4
.kdev4/: VINS-Fusion.kdev4
camera_models/src/: intrinsic_calib.cc
camera_models/src/camera_models/: CameraFactory.cc
config/self_car/: cam0_pinhole.yaml  infinite.yaml
config/vi_car/: vi_car.yaml
loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: utility.cpp  utility.h
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  projectionTwoFrameOneCamFactor.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.h
vins_estimator/src/utility/: tic_toc.h  utility.cpp  utility.h  visualization.cpp  visualization.h
